# MasakinProjectBackend

./: .env  .gitignore  LICENSE  Procfile  README.md  dockerfile  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py
app/models/: bookmarks.py  cooking_type.py  cooking_utensils.py  country.py  food.py  how_to_cook.py  ingredient_details.py  ingredient_name.py  rating_recipe.py  recipes.py  users.py  utensil_name.py
app/static/: openapi.json
app/utils/: db.py  helper.py
migrations/versions/: 03e9f996f1b9_add_country_id_foreign_key_to_recipe.py  1443063c6c4d_add_user_table.py  1582a474fdf8_add_country_table.py  1d212e88d4ce_alter_ingredients_column_from_integer_.py  2edd703c7259_add_users_country_food_rating_route_.py  3e87dc58dbe0_add_recipe_and_country_models.py  5a137d42f530_add_four_tables.py  606816b931b5_alter_how_to_cook_column_from_integer_.py  62b57825125e_change_data_type_of_image_column_to_.py  6a5122ba3ebd_add_cooking_type_ids_column_in_.py  7541dd779ae2_add_cooking_type_table.py  7842e21d3151_add_food_table.py  84e741979aac_add_how_to_cook_table.py  93c5f6d37f08_add_ingredient_details_table.py  944f3f6dfd55_add_recipes_table.py  9e859338719a_fixed_the_response_display_settings_in_.py  a72566c74751_add_ingredient_name_and_utensil_name_.py  a7268344a254_change_type_tring_to_text_in_the_.py  af11b382b2c6_fixed_the_relationship_settings_in_the_.py  bbc2f8992734_add_servings_column_in_recipes_table.py  c952bf3026c7_add_cooking_utensils_table.py  d2f1d4099151_add_bokmarks_table.py  d92375a4c31e_alter_utensils_column_from_integer_to_.py  (+2 more)
(+10 files in other folders)
